fix: button icon align

--- a/miniprogram/pages/detail/index.less
+++ b/miniprogram/pages/detail/index.less
@@ -139,9 +139,8 @@
     transform: translateY(0);
   }
 
-  &__button {
-    display: flex;
-    align-items: center;
+  &__text {
+    line-height: 36rpx;
   }
 
   &__icon {
